# Dacon

./: .gitignore  pyproject.toml
predicting_final_pass_coordinates/: .gitignore  README.md  baseline.py  pyproject.toml
predicting_final_pass_coordinates/src/: baseline.py  baseline_evaldump.py  baseline_kfold_v3.py  diagnose_bins_sat95.py  diagnose_stage_abc_report.py  eda.ipynb  make_error_bin_tables.py  summarize_fold1_from_bins.py  train_hydra_wandb.py
predicting_final_pass_coordinates/src/conf/: config.yaml  config_kfold_v3.yaml
predicting_heart_disease/: blend_oof_opt.py  blend_rank_average.py  eda.ipynb  main.py  pyproject.toml
predicting_learner_completion/: .gitignore  README.md  [Baseline]_RandomForest 모델을 활용한 수료 여부 예측.ipynb  baseline.py  catboost_kfold.py  catboost_kfold_multihot.py  catboost_kfold_multihot_cv_safe.py  eda.py  final_model.txt  main.py  pyproject.toml  train.py  train_model.py  train_optuna.py  train_optuna_rare_grid.py  train_optuna_rare_grid_multihot.py
predicting_learner_completion/conf/: config.yaml
predicting_learner_completion/conf/data/: data_default.yaml  default.yaml
predicting_learner_completion/conf/model/: lgbm.yaml  lightgbm.yaml  logistic_regression.yaml  random_forest.yaml  xgboost.yaml
predicting_learner_completion/conf/optuna/: default.yaml  optuna_default.yaml  tune.yaml
predicting_learner_completion/conf/preprocess/: catboost_encoder.yaml  onehot_dense.yaml  onehot_sparse.yaml  ordinal_encoded.yaml  standardize_onehot_sparse.yaml  target_encoder.yaml
predicting_learner_completion/conf/sampler/: adasyn.yaml  borderline_smote.yaml  none.yaml  random_under.yaml  smote.yaml  smoteenn.yaml  smotenc.yaml  smotetomek.yaml  svm_smote.yaml
predicting_learner_completion/conf/train/: default.yaml  train_default.yaml
predicting_learner_completion/conf/wandb/: default.yaml
project1/: av_run.py  nsys_test.sqlite  pyproject.toml  run_nsys_test.sh  test_nsys_pytorch.py
project1/av_outputs/: av_report.txt  feature_importance.csv  test_likeness.csv
project1/nsight/: nsys_test.nsys-rep  nsys_test_report.txt
