[project]
name = "predicting-learner-completion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "wandb==0.23.0",
    "xgboost>=3.1.3",
]
